--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <canvas id="game-area" class="game-area"></canvas>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babylonjs/2.4.0/babylon.core.js"></script>
+    <script src="vendor/babylon-2.4.0.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
